@@ -4,13 +4,13 @@ Hash: SHA256
 DIST faraday-0.9.0.tar.gz 53998 SHA256 0b3503ca485e25082ae20d67ec1f3594d802dc28e5f61e857b741520216f2927 SHA512 d69db4fced6edb7f161078d2fb3d60f11d8bbc14785e08a6aae262915a23cd3fd1f1b871a269491738e623b6b804626e812223678a5e3cc133baafc485c87dd4 WHIRLPOOL 3924f408edb4cc1e3d5df35c0b052f1f12d2f575b1671a4d5aaf4eb7b33e925e3fc5683b564e6d58ab556675022594abace05cf984b83652948c0e0e5c18a313
 DIST faraday-0.9.1.tar.gz 56944 SHA256 27c82ff6eb0b25da7077bd724edc545bc9438e25554fa259434f825ffeb20da5 SHA512 9686f8fd5adc4380dee0cefc3a18f3b8dbe9a7785bfea5e0332dbb6f4d3af4311698e87eb6ac7f070fd758d68fb5f9cf9beec81e86a05da7fe6a5ba6fded1a3b WHIRLPOOL 59f060c2bb1441de7fd55565050e8c47f826c3361b2ca37bac2f812d5f9ba4b49a639f37bb2bc73d49ed5c3e0c1633b7c82bd428fa0ebc01e5d68defbe0deb09
 EBUILD faraday-0.9.0.ebuild 1664 SHA256 7f8d4965898d5622930622bd425c77144a7d9e64592f7e2a6bde5a8578df2736 SHA512 61566c64f737bf7a11d28e9cc719383b95c42ea3271803cbff8903aa0b052056d6470c9f046ec5c1798b5d674bc2d52e8d28ca4dce1394e4611e2e5add469a6d WHIRLPOOL ac191ac7d481a1ee89053a2cd7c8341459aa06b43feacdff97e5763b828fe1e469c857993ef00bcc211423b45ca43e0817c451acee3a01a3b8c53b9f5aaa03f4
-EBUILD faraday-0.9.1.ebuild 1754 SHA256 251f95b9f4f2c02d989b27c50f21f1b60a5d3054e016948b343f0685628bd248 SHA512 8c86cccac5cbb3c0a124ec8f6c1b8a6b9a4c3bc5abaa21386d76ad898110094377b5ed339dba55b55c550990cec568a99ae48d0af22140c1e74f6b2bc3733d3b WHIRLPOOL c66bf9e9678a7bd363ba9550a1f0560fe1ad045be2546ee2f4e6ff5f3816127d100301dc57517cb1baf94e99e88d5495cd60dbf17717833a511c93354e931056
-MISC ChangeLog 4095 SHA256 91fdf3a8a542467ef621b0d49c16b3972c8ebec462b76eb37fbbe29b39d9b72e SHA512 fc93de6c36b87b5b5d71a947d64ed6522d6a06191bbb480bde46b480096e70c35f2c9f0499fa5b852da72cfae5459d3f49c65e8372a4dcdbba1fd8e14ae58397 WHIRLPOOL 9b9d525149cc6ba9ef1cb0f85b267241f1d8080362073c6114972718fab29ddcf6fbdae8d4d1c44bba985056923912c65a8f20f2cf7e4025615a688bbb87c884
+EBUILD faraday-0.9.1.ebuild 1773 SHA256 5193c47a74ce48ba4d40abffd56e71703208ddaf15bb169b37bf7cef9cb6f248 SHA512 1cc81c986d00444a4ca1ce9f04adc534eef51cfb0b63e895b6b293eba8d403bb352f5330a040d471fd8d7e1bcedd9684d8ff128ae371c0ac33778c0c4dce7a5e WHIRLPOOL 1d18cc363c2bf477f941f45c23c8e09ad81dcecaa8c395cead1e547783ecf2289755fbcd82e9e756fe0a5b67c36707717bf58ab2a9321b2546696c7973941938
+MISC ChangeLog 4219 SHA256 042f622052dcc8983aeef5b675c15b7aa9c9b6f4c05794fb07f47c83acc3589e SHA512 59df4ca10c417a92ca4fdb8f6bdfbf21ab341ff395904556bb02f32a4eb49d735db8c0d419fd076b3410d732159153efd3342927c620afc7121b526d5a263106 WHIRLPOOL 6432996fa2584c8ea01d750ce8d986921f99615eac6177e94f4f7e57a401aa9acbee12033d7cb5d4c51770cb7749488d0aa7e9d23522a1c1e455c9dc5355c2d3
 MISC metadata.xml 157 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c SHA512 0cec73b966de88015ea4c7212723d848d367608aa93658bb945f298a8000c4ba8aba73c9eb8481859fb5bbed45e80dae32c628caf81e027a4ad8eafa7e632851 WHIRLPOOL 4da25c81e21173ad8b7b5f35b056264869d9a16741062aa4422c5ea1aa9e73da8eb700b0d54de84c169d702fbb3f41ed157c9dc7c9daac110849ae84715c051b
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlUyUwcACgkQI1lqEGTUzyS//QCdEvE5/5roioj4324JlWEeRjo6
-tQkAnRdXwUPvUoRK8yYY82Xg1P3GlHAE
-=hUJH
+iF4EAREIAAYFAlVF0x4ACgkQiIP6VqMIqNcdegD9GrAB94EnLQk5xqHncOEqDV4o
+keOwV+ZiBj6/CGUoXrwA/2uaDHodYJZAhjJOQciNteX2Knhvh5GJTTIGYWntraxg
+=sQfA
 -----END PGP SIGNATURE-----
