@@ -1,5 +1,5 @@
 DEFINED_PHASES=compile configure install prepare setup test unpack
-DEPEND=test? ( ruby_targets_ruby19? ( >=dev-ruby/ffi-1.3.0[ruby_targets_ruby19] ) ruby_targets_ruby20? ( >=dev-ruby/ffi-1.3.0[ruby_targets_ruby20] ) ruby_targets_ruby21? ( >=dev-ruby/ffi-1.3.0[ruby_targets_ruby21] ) ) ruby_targets_ruby19? ( test? ( dev-ruby/sinatra[ruby_targets_ruby19] ) ) ruby_targets_ruby20? ( test? ( dev-ruby/sinatra[ruby_targets_ruby20] ) ) ruby_targets_ruby21? ( test? ( dev-ruby/sinatra[ruby_targets_ruby21] ) ) ruby_targets_ruby19? ( dev-lang/ruby:1.9 ) ruby_targets_ruby20? ( dev-lang/ruby:2.0 ) ruby_targets_ruby21? ( dev-lang/ruby:2.1 ) ruby_targets_ruby19? ( test? ( dev-ruby/rspec:2[ruby_targets_ruby19] >=dev-ruby/rspec-core-2.14.8-r2[ruby_targets_ruby19] ) ) ruby_targets_ruby20? ( test? ( dev-ruby/rspec:2[ruby_targets_ruby20] >=dev-ruby/rspec-core-2.14.8-r2[ruby_targets_ruby20] ) ) ruby_targets_ruby21? ( test? ( dev-ruby/rspec:2[ruby_targets_ruby21] >=dev-ruby/rspec-core-2.14.8-r2[ruby_targets_ruby21] ) ) ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) ruby_targets_ruby20? ( virtual/rubygems[ruby_targets_ruby20] ) ruby_targets_ruby21? ( virtual/rubygems[ruby_targets_ruby21] ) test? ( ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) ruby_targets_ruby20? ( virtual/rubygems[ruby_targets_ruby20] ) ruby_targets_ruby21? ( virtual/rubygems[ruby_targets_ruby21] ) )
+DEPEND=test? ( ruby_targets_ruby19? ( >=dev-ruby/ffi-1.3.0[ruby_targets_ruby19] ) ruby_targets_ruby20? ( >=dev-ruby/ffi-1.3.0[ruby_targets_ruby20] ) ruby_targets_ruby21? ( >=dev-ruby/ffi-1.3.0[ruby_targets_ruby21] ) ) ruby_targets_ruby19? ( test? ( dev-ruby/sinatra[ruby_targets_ruby19] dev-ruby/mime-types[ruby_targets_ruby19] ) ) ruby_targets_ruby20? ( test? ( dev-ruby/sinatra[ruby_targets_ruby20] dev-ruby/mime-types[ruby_targets_ruby20] ) ) ruby_targets_ruby21? ( test? ( dev-ruby/sinatra[ruby_targets_ruby21] dev-ruby/mime-types[ruby_targets_ruby21] ) ) ruby_targets_ruby19? ( dev-lang/ruby:1.9 ) ruby_targets_ruby20? ( dev-lang/ruby:2.0 ) ruby_targets_ruby21? ( dev-lang/ruby:2.1 ) ruby_targets_ruby19? ( test? ( dev-ruby/rspec:2[ruby_targets_ruby19] >=dev-ruby/rspec-core-2.14.8-r2[ruby_targets_ruby19] ) ) ruby_targets_ruby20? ( test? ( dev-ruby/rspec:2[ruby_targets_ruby20] >=dev-ruby/rspec-core-2.14.8-r2[ruby_targets_ruby20] ) ) ruby_targets_ruby21? ( test? ( dev-ruby/rspec:2[ruby_targets_ruby21] >=dev-ruby/rspec-core-2.14.8-r2[ruby_targets_ruby21] ) ) ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) ruby_targets_ruby20? ( virtual/rubygems[ruby_targets_ruby20] ) ruby_targets_ruby21? ( virtual/rubygems[ruby_targets_ruby21] ) test? ( ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) ruby_targets_ruby20? ( virtual/rubygems[ruby_targets_ruby20] ) ruby_targets_ruby21? ( virtual/rubygems[ruby_targets_ruby21] ) )
 DESCRIPTION=Very lightweight libcurl wrapper
 EAPI=5
 HOMEPAGE=https://github.com/typhoeus/ethon
@@ -11,4 +11,4 @@ REQUIRED_USE=|| ( ruby_targets_ruby19 ruby_targets_ruby20 ruby_targets_ruby21 )
 SLOT=0
 SRC_URI=mirror://rubygems/ethon-0.7.3.gem
 _eclasses_=eutils	9fb270e417e0e83d64ca52586c4a79de	java-utils-2	4241a8d9ed765c83041b38ac128505cd	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	ruby-fakegem	d4f8591e9b20b106327e9d143eb13da5	ruby-ng	c79a9fd7644eefe8009be02a82648e1f	toolchain-funcs	c961250d50160cd37d6b7fd9e8429c92	versionator	cd0bcdb170807e4a1984115e9d53a26f
-_md5_=2aa7332df592fd04b9e328bb6bcdd9e8
+_md5_=cc27c88ef859d87c0f99dea9b7fab288
