@@ -1,5 +1,5 @@
 DEFINED_PHASES=compile configure install prepare setup test unpack
-DEPEND=test? ( sys-process/lsof ) test? ( ruby_targets_ruby19? ( >=dev-ruby/multipart-post-1.2.0[ruby_targets_ruby19] <dev-ruby/multipart-post-3[ruby_targets_ruby19] ) ruby_targets_ruby20? ( >=dev-ruby/multipart-post-1.2.0[ruby_targets_ruby20] <dev-ruby/multipart-post-3[ruby_targets_ruby20] ) ruby_targets_ruby21? ( >=dev-ruby/multipart-post-1.2.0[ruby_targets_ruby21] <dev-ruby/multipart-post-3[ruby_targets_ruby21] ) ) ruby_targets_ruby19? ( test? ( >=dev-ruby/test-unit-2.4[ruby_targets_ruby19] dev-ruby/httpclient[ruby_targets_ruby19] dev-ruby/sinatra[ruby_targets_ruby19] dev-ruby/net-http-persistent[ruby_targets_ruby19] dev-ruby/patron[ruby_targets_ruby19] ) ) ruby_targets_ruby20? ( test? ( >=dev-ruby/test-unit-2.4[ruby_targets_ruby20] dev-ruby/httpclient[ruby_targets_ruby20] dev-ruby/sinatra[ruby_targets_ruby20] dev-ruby/net-http-persistent[ruby_targets_ruby20] dev-ruby/patron[ruby_targets_ruby20] ) ) ruby_targets_ruby21? ( test? ( >=dev-ruby/test-unit-2.4[ruby_targets_ruby21] dev-ruby/httpclient[ruby_targets_ruby21] dev-ruby/sinatra[ruby_targets_ruby21] dev-ruby/net-http-persistent[ruby_targets_ruby21] dev-ruby/patron[ruby_targets_ruby21] ) ) ruby_targets_ruby19? ( dev-lang/ruby:1.9 ) ruby_targets_ruby20? ( dev-lang/ruby:2.0 ) ruby_targets_ruby21? ( dev-lang/ruby:2.1 ) ruby_targets_ruby19? ( test? ( dev-ruby/rake[ruby_targets_ruby19] ) ) ruby_targets_ruby20? ( test? ( dev-ruby/rake[ruby_targets_ruby20] ) ) ruby_targets_ruby21? ( test? ( dev-ruby/rake[ruby_targets_ruby21] ) ) ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) ruby_targets_ruby20? ( virtual/rubygems[ruby_targets_ruby20] ) ruby_targets_ruby21? ( virtual/rubygems[ruby_targets_ruby21] ) test? ( ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) ruby_targets_ruby20? ( virtual/rubygems[ruby_targets_ruby20] ) ruby_targets_ruby21? ( virtual/rubygems[ruby_targets_ruby21] ) )
+DEPEND=test? ( sys-process/lsof ) test? ( ruby_targets_ruby19? ( >=dev-ruby/multipart-post-1.2.0[ruby_targets_ruby19] <dev-ruby/multipart-post-3[ruby_targets_ruby19] ) ruby_targets_ruby20? ( >=dev-ruby/multipart-post-1.2.0[ruby_targets_ruby20] <dev-ruby/multipart-post-3[ruby_targets_ruby20] ) ruby_targets_ruby21? ( >=dev-ruby/multipart-post-1.2.0[ruby_targets_ruby21] <dev-ruby/multipart-post-3[ruby_targets_ruby21] ) ) ruby_targets_ruby19? ( test? ( >=dev-ruby/test-unit-2.4[ruby_targets_ruby19] dev-ruby/httpclient[ruby_targets_ruby19] dev-ruby/rack-test[ruby_targets_ruby19] dev-ruby/sinatra[ruby_targets_ruby19] dev-ruby/net-http-persistent[ruby_targets_ruby19] dev-ruby/patron[ruby_targets_ruby19] ) ) ruby_targets_ruby20? ( test? ( >=dev-ruby/test-unit-2.4[ruby_targets_ruby20] dev-ruby/httpclient[ruby_targets_ruby20] dev-ruby/rack-test[ruby_targets_ruby20] dev-ruby/sinatra[ruby_targets_ruby20] dev-ruby/net-http-persistent[ruby_targets_ruby20] dev-ruby/patron[ruby_targets_ruby20] ) ) ruby_targets_ruby21? ( test? ( >=dev-ruby/test-unit-2.4[ruby_targets_ruby21] dev-ruby/httpclient[ruby_targets_ruby21] dev-ruby/rack-test[ruby_targets_ruby21] dev-ruby/sinatra[ruby_targets_ruby21] dev-ruby/net-http-persistent[ruby_targets_ruby21] dev-ruby/patron[ruby_targets_ruby21] ) ) ruby_targets_ruby19? ( dev-lang/ruby:1.9 ) ruby_targets_ruby20? ( dev-lang/ruby:2.0 ) ruby_targets_ruby21? ( dev-lang/ruby:2.1 ) ruby_targets_ruby19? ( test? ( dev-ruby/rake[ruby_targets_ruby19] ) ) ruby_targets_ruby20? ( test? ( dev-ruby/rake[ruby_targets_ruby20] ) ) ruby_targets_ruby21? ( test? ( dev-ruby/rake[ruby_targets_ruby21] ) ) ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) ruby_targets_ruby20? ( virtual/rubygems[ruby_targets_ruby20] ) ruby_targets_ruby21? ( virtual/rubygems[ruby_targets_ruby21] ) test? ( ruby_targets_ruby19? ( virtual/rubygems[ruby_targets_ruby19] ) ruby_targets_ruby20? ( virtual/rubygems[ruby_targets_ruby20] ) ruby_targets_ruby21? ( virtual/rubygems[ruby_targets_ruby21] ) )
 DESCRIPTION=HTTP/REST API client library with pluggable components
 EAPI=5
 HOMEPAGE=http://github.com/lostisland/faraday
@@ -11,4 +11,4 @@ REQUIRED_USE=|| ( ruby_targets_ruby19 ruby_targets_ruby20 ruby_targets_ruby21 )
 SLOT=0
 SRC_URI=https://github.com/lostisland/faraday/archive/v0.9.1.tar.gz -> faraday-0.9.1.tar.gz
 _eclasses_=eutils	9fb270e417e0e83d64ca52586c4a79de	java-utils-2	4241a8d9ed765c83041b38ac128505cd	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	ruby-fakegem	d4f8591e9b20b106327e9d143eb13da5	ruby-ng	c79a9fd7644eefe8009be02a82648e1f	toolchain-funcs	c961250d50160cd37d6b7fd9e8429c92	versionator	cd0bcdb170807e4a1984115e9d53a26f
-_md5_=d4015701c57fd9896affffc8ef0e6136
+_md5_=36fd15a77ad4770d71a42e1bc832dbb9
