@@ -1,0 +1,13 @@
+DEFINED_PHASES=compile configure install prepare pretend setup test
+DEPEND=app-arch/bzip2 app-arch/xz-utils sys-libs/zlib systemd? ( sys-apps/systemd ) dev-util/cmake >sys-devel/gcc-4.8 virtual/pkgconfig sys-devel/make >=dev-util/cmake-2.8.12 userland_GNU? ( >=sys-apps/findutils-4.4.0 )
+DESCRIPTION=Yet another implementation of an HTTP proxy for Debian/Ubuntu software packages written in C++
+EAPI=5
+HOMEPAGE=http://www.unix-ag.uni-kl.de/~bloch/acng/ http://packages.qa.debian.org/a/apt-cacher-ng.html
+IUSE=doc fuse systemd tcpd
+KEYWORDS=~amd64 ~x86
+LICENSE=BSD-4 ZLIB public-domain
+RDEPEND=app-arch/bzip2 app-arch/xz-utils sys-libs/zlib systemd? ( sys-apps/systemd ) dev-lang/perl fuse? ( sys-fs/fuse ) tcpd? ( sys-apps/tcp-wrappers )
+SLOT=0
+SRC_URI=mirror://debian/pool/main/a/apt-cacher-ng/apt-cacher-ng_0.8.3.orig.tar.xz
+_eclasses_=cmake-utils	0430c386d85cec959d72640afd63ea91	eutils	9fb270e417e0e83d64ca52586c4a79de	flag-o-matic	c263990f1b677b0f0be0a3299f179762	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	toolchain-funcs	c961250d50160cd37d6b7fd9e8429c92	user	f54e098dd38ba1c0847a13e685b87747
+_md5_=7c4df7a677df1f1760429b5c4e17f894
