@@ -8,14 +8,16 @@ AUX initd-r1 1014 SHA256 a95bf310d68b12df1a3d07ca95d879420165cf932dc6783f7122d25
 AUX logrotate 377 SHA256 6f1624d655383452a6d56d69327d41b80379cc667ad2d481ca94f8ea78f7a65b SHA512 c2f4be7294953a63a89e5beee40029e03faa1db49986a6f8d974def67b064d391be13ecddec0d6b4d7ec369db6dcd0bafc328e90b54ccec911df739c719fd885 WHIRLPOOL 80037bc359ffb860ce19e2493d10597f81e02138368ad2bce002da8f4a725cdeee61662478efff4755f0f8a0c9f376263fd6b56505eddddd5c18c1a33f7d22b8
 DIST apt-cacher-ng_0.8.1.orig.tar.xz 506356 SHA256 fb628716079c2c5330aff3fcfc878682c42426906a8cc6376f2d77c0fecf50db SHA512 638db85b5ec69cacc8c4f6d1e86741fe00ac47deca681963fc79ead352bafce065d21fdf4d8209d279bbf688fea56cbabec4cc256ee29480c30db85616896cf2 WHIRLPOOL 141e02dc5607be3b1d51cfd6abc9cd31d29e7b230fc39bb7c1bc5acc2dc2074764fc5fed92fe7eded94230c3bcd522fdb27b2fe20d2ee9663c8911c5e8b02c58
 DIST apt-cacher-ng_0.8.2.orig.tar.xz 292512 SHA256 1ea9fa39cccf3832c12586bca2921d1a90cfb3d89a93644dd06f3cbc11c84826 SHA512 521faf31e52327e5b71d012794475b6889e21ef6569b1ce8d7a2461a81fd5f0dbb642843966f7daa6391dda6cb2794ded0fbbad0959b2a8d54f8fc434cea900a WHIRLPOOL 7b89f0c57fb04d10731721b62e7972eb10f16190e99ce55c72eeab68dbc1e0a187ce9d856335eacbd8fa8f4d3c1922a3871ccde20b4b61839063327b0952adb0
+DIST apt-cacher-ng_0.8.3.orig.tar.xz 294116 SHA256 d86a6616b56094b6888a10ff40ae374beac2bc3525ab7b9e7159c4f4dfd00c49 SHA512 dbccec0ba44af34870bdf5650ae594552a7816d1203210f9a09826c0dec6d74f24c07bd0d18ab3df6f9068f15c601e54aa0892e68f6bfca4b59ae300c4313210 WHIRLPOOL 0fee51e0834f1e18ff020c933a52c7745fd23ccb3cde50ea71a10662643ccf55710f77314c344e18b07b534c9346bb010b14229fd9cf9afc0202a53baad2e84f
 EBUILD apt-cacher-ng-0.8.1.ebuild 2602 SHA256 00fcff71bebc19a4579c16aedec37ecd8b08bada8b3a63d8e862cbc41fc92f52 SHA512 b26c43173c9218d547562b38fba21cad1ca1c7a0af8a071a712ffb721e63abcf8cf6cee4fbb3912bb51a0dc74c18a14fc642fe24af05e3bbde87e4708b07afcc WHIRLPOOL e2c014060b6a0e564486a34855a2bc957b24f61fd832283ad39a7722a0a1f58c4c9e92208e81f6c50e0f12a1247dff94fac7675a517b257237b57f8378a2ac90
 EBUILD apt-cacher-ng-0.8.2.ebuild 2602 SHA256 f0bf22a6a785cba4afae0b671259b5992bf4a2a20ed09efd127d1650b0324f81 SHA512 2aa781d001f962d8c996d6f7828580f492aa8eb3000715a4a0410751347d9c675b00bf4e0cdd41df9a84737f0cc58d65e94cb178986b3ab86b0e7d76b66fc305 WHIRLPOOL e193809f2a34d30623f554c0e3fb1e63a1905e1acd8ce00c2e7c319e3ff1e64f4bf087ac60bd5bfa270d5e31dd751a2cc156029ac99142368a10393a14c7e7d6
-MISC ChangeLog 8894 SHA256 e378bc88b315dee3322c76dc67a881db2e5014b64515348dd9fff6809978cbe8 SHA512 286d1995dea9d55f5cb51680e3766f98d4b8605b147d0d6cef07059c583852dde4aaeea35a4d3ba2a67ac3dd4f0b48c4ce63127f79858f02b6f2b39b1d5a2781 WHIRLPOOL ae31f04a92eca997dd3569b98c95eb5c241655711ddaa7673ae034732c5e0a443668c3ba0a816e64476608d476992e5fca2379641df85b2ac7cddfd45b72391a
+EBUILD apt-cacher-ng-0.8.3.ebuild 2602 SHA256 181480049ddccc37e688e7128a1526b2841384572ff30ac0af9b88de288d5299 SHA512 9dab6234ff04cbd143f82cb1e57ec04ce77293ba1465c33782e26b83251e00292e58f1427954470cb6eb13afe6c633a238ee65e9e0b39c9f836a2c050d4a5f1a WHIRLPOOL d8b539f2e0e98f493ab527327a618e9203e152c7adb80a83058d4380c809e19f3373923cb3768e16ca9d389ef8a5a133391a09d885474b31fc0ef41a839874ef
+MISC ChangeLog 9023 SHA256 e8b8a7b952f61bc581f9c905d1c0ba25bc5ebe4a851c8ac70e8f2f842467dcd3 SHA512 8cfcbcc9e63c160341d1871198229c04d98c77f06a91972703e2601ee87271b7ff40557a5b1036f99b6b518ae3709f837a426b651a270e32d08a05bc1e84d074 WHIRLPOOL 9bd13ad290c3ed865f859246a98edf588fe4d659f9deb4bf2944ee063aee903997eeffa3ed3a3c6a56f00c4b5d52431e14a55cab43cd82685ce8c51b44b71a0f
 MISC metadata.xml 383 SHA256 451133e4be491583d0c74b4bf1147774f7debf4c6bb18e041c0d17304c670480 SHA512 2884742a86f4d74a373f26e47d01cc430190b9a07a3d414ddcb0758f8beb669c042f733deff36e06dd0dc0ea074ffd7d06d74610f3786f10680e8e6209577897 WHIRLPOOL b2febd2f0e2af9f7bd8acd8c47f1ec5c3328c32d83fa77056ee01b3aa53dc87dd687e73ae51d71f1accb8bd37f466bab0e0c37c7812b9b7ae304afd686785808
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iEYEAREIAAYFAlVBr8cACgkQVWmRsqeSphNCJACfUWrX13PP7i1ynpSzhoTASvB3
-Oq4Anj3eWvquoV7oCXrDXa6Ag/GzoEbx
-=aXXK
+iEYEAREIAAYFAlVF1QMACgkQVWmRsqeSphMofgCfTVfStXMv2blfg8zZwZaRTrcl
+UyUAn0Hn/BMU/ZUcgxCtB+ewNe6UbJhC
+=OKtx
 -----END PGP SIGNATURE-----
