@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/faraday
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/faraday/ChangeLog,v 1.28 2015/04/18 12:50:14 swegener Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/faraday/ChangeLog,v 1.29 2015/05/03 07:49:49 graaff Exp $
+
+  03 May 2015; Hans de Graaff <graaff@gentoo.org> faraday-0.9.1.ebuild:
+  Add missing test dependency on dev-ruby/rack-test.
 
   18 Apr 2015; Sven Wegener <swegener@gentoo.org> faraday-0.9.0.ebuild,
   faraday-0.9.1.ebuild:
