@@ -1,6 +1,11 @@
 # ChangeLog for net-misc/apt-cacher-ng
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/net-misc/apt-cacher-ng/ChangeLog,v 1.52 2015/04/30 04:29:58 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/net-misc/apt-cacher-ng/ChangeLog,v 1.53 2015/05/03 07:57:53 jer Exp $
+
+*apt-cacher-ng-0.8.3 (03 May 2015)
+
+  03 May 2015; Jeroen Roovers <jer@gentoo.org> +apt-cacher-ng-0.8.3.ebuild:
+  Version bump.
 
 *apt-cacher-ng-0.8.2 (30 Apr 2015)
 
