@@ -1,6 +1,9 @@
 # ChangeLog for dev-ruby/ethon
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ethon/ChangeLog,v 1.2 2015/03/02 06:11:26 graaff Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-ruby/ethon/ChangeLog,v 1.3 2015/05/03 07:36:10 graaff Exp $
+
+  03 May 2015; Hans de Graaff <graaff@gentoo.org> ethon-0.7.3.ebuild:
+  dev-ruby/mime-types is optional but the tests depend on it being present.
 
 *ethon-0.7.3 (02 Mar 2015)
 
